--- a/NIMHDataLabeler/package.json
+++ b/NIMHDataLabeler/package.json
@@ -10,19 +10,30 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/native": "^5.1.1",
+    "cors": "^2.8.5",
+    "csv": "^5.3.2",
     "expo": "~36.0.0",
+    "expo-document-picker": "^8.1.0",
+    "express": "^4.17.1",
+    "firebase": "^7.14.2",
+    "formidable": "^1.2.2",
     "link": "^0.1.5",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-dropzone": "^11.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-document-picker": "^3.3.3",
     "react-native-elements": "^1.2.7",
     "react-native-error-boundary": "^1.1.0",
+    "react-native-file-picker": "0.0.19",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-reanimated": "^1.7.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.2",
     "react-navigation-drawer": "^2.4.6"
@@ -31,5 +42,6 @@
     "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0"
   },
+  "proxy": "http://localhost:5000",
   "private": true
 }
