--- a/NIMHDataLabeler/package.json
+++ b/NIMHDataLabeler/package.json
@@ -37,12 +37,13 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.2",
-    "react-navigation-drawer": "^2.4.6"
+    "react-navigation-drawer": "^2.4.6",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0"
   },
-  "proxy": "http://0.0.0.0:5000",
+  "proxy": "http://192.168.1.152:8080",
   "private": true
 }
