--- a/NIMHDataLabeler/Dockerfile
+++ b/NIMHDataLabeler/Dockerfile
@@ -4,6 +4,7 @@ COPY ./requirements.txt /deploy/
 COPY ./active_model_tfidf_SVM.sav /deploy/
 COPY ./cert.pem /deploy/
 COPY ./key.pem /deploy/
+COPY ./logging.cfg /deploy/
 WORKDIR /deploy/
 RUN pip install -r requirements.txt
 EXPOSE 80 443 8443 8080
